--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,10 @@
   },
   "ConnectionStrings": {
     "BookStoreConnectionString": "User ID=postgres;Password=Secret;Host=localhost;Port=5432;Database=booksdb;"
+  },
+  "JWT": {
+    "ValidIssuer": "https://localhost:44324",
+    "ValidAudiance": "User",
+    "Secret": "ThisIsMySecret1234567890"
   }
 }
