--- a/.gitignore
+++ b/.gitignore
@@ -267,7 +267,7 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-
+*.txt
 # Cake - Uncomment if you are using it
 # tools/
 Properties/
